[WebVTT] HTML5 "space" cahracters around "-->" are not required https://bugs.webkit.org/show_bug.cgi?id=117421

Reviewed by Eric Carlson.

Merged from Blink (patch by caitpotter88@gmail.com):
https://chromium.googlesource.com/chromium/blink/+/4ef469cd627a13696b88e285ae28a60e38f9c286
http://crbug.com/242158

Source/WebCore:

New tests: media/track/track-webvtt-tc029-timings-whitespace.html

* html/track/WebVTTParser.cpp:
(WebCore::WebVTTParser::collectTimingsAndSettings): Make whitespace around cue-timings optional.

LayoutTests:

* media/track/captions-webvtt/tc008-timings-no-hour-errors.vtt:
* media/track/captions-webvtt/tc009-timings-hour-error.vtt:
* media/track/captions-webvtt/tc029-timings-whitespace.vtt: Added.
* media/track/track-webvtt-tc029-timings-whitespace.html: Added.
* media/track/track-webvtt-tc029-timings-whitespace-expected.txt: Added.


Canonical link: https://commits.webkit.org/148107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165498 268f45cc-cd09-0410-ab3c-d52691b4dbfc